<resources>
    <string name="app_name">NewsApplication</string>
    <string name="faviorties">Faviorties</string>
    <string name="following">Following</string>
    <string name="favorites">favorites</string>
    <string name="all_headlines">All headlines</string>
    <string name="settings">Settings</string>

    <string name="enable_dark_mode">enable dark mode</string>
    <string name="enable_data_saver">enable data saver</string>
    <string name="preferredCountry">preferred Country</string>

    <string name="headline">Headline</string>
    <string name="author">Author</string>
    <string name="publisher">Publisher</string>
    <string name="contents">Contents</string>
    <string name="description">Description</string>
    <string name="sign_up">sign up</string>
    <string name="sign_in">sign in</string>
    <string name="email">email</string>
    <string name="password">Password</string>
    <string name="log_out">log out</string>
    <string name="sign_out">sign out</string>
    <string name="technology">technology</string>
    <string name="science">science</string>
    <string name="entertainment">entertainment</string>
    <string name="general">general</string>
    <string name="health">health</string>
    <string name="sports">sports</string>
    <string name="low_data_mode">low data mode</string>
    <string name="search">search</string>
    <string name="enter_category_to_search_for">Enter category to search for</string>
</resources>