<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/favItem"
        android:enabled="true"
        android:icon="@drawable/baseline_favorite_white_18dp"
        android:title="@string/favorites"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/followItem"
        android:enabled="true"
        android:icon="@drawable/baseline_flag_white_18dp"
        android:title="@string/following"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/worldItem"
        android:enabled="true"
        android:icon="@drawable/baseline_public_white_18dp"
        android:title="@string/all_headlines"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/settingItem"
        android:enabled="true"
        android:icon="@drawable/baseline_settings_white_18dp"
        android:title="@string/settings"
        app:showAsAction="ifRoom" />
</menu>